chore: test angular CI with webpackfinal for storybook and tsconfig

--- a/packages/core/lib/tokens/primitives/_typography.scss
+++ b/packages/core/lib/tokens/primitives/_typography.scss
@@ -2,28 +2,28 @@
 
 @font-face {
   font-family: "Nunito";
-  src: url("../../assets/fonts/Nunito-Light.woff2") format("woff2");
+  src: url("core-fonts/Nunito-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("../../assets/fonts/Nunito-Regular.woff2") format("woff2");
+  src: url("core-fonts/Nunito-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("../../assets/fonts/Nunito-SemiBold.woff2") format("woff2");
+  src: url("core-fonts/Nunito-SemiBold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("../../assets/fonts/Nunito-Bold.woff2") format("woff2");
+  src: url("core-fonts/Nunito-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
