feat: Add react Checkbox group

--- a/packages/react/src/components/checkbox/Checkbox.module.scss
+++ b/packages/react/src/components/checkbox/Checkbox.module.scss
@@ -118,6 +118,7 @@
       ~ .checkbox-text-container {
         label,
         .checkbox-description {
+          pointer-events: none;
           color: var(--content-tertiary);
         }
       }
