refactor: update button variants from 'filled' and 'outlined' to 'primary' and 'secondary' across components and stories

--- a/packages/angular/src/components/button/button.component.scss
+++ b/packages/angular/src/components/button/button.component.scss
@@ -45,7 +45,7 @@
         }
     }
 
-    &.filled {
+    &.primary {
         border: var(--border-brand-default);
         color: var(--content-primary-inverse);
         background: var(--background-brand-default);
@@ -68,7 +68,7 @@
         }
     };
 
-    &.outlined {
+    &.secondary {
         background: var(--background-default);
         border: solid 1px var(--border-brand-default);
         color: var(--content-brand-default);
