feat: set publication config

--- a/packages/core/tokens/main.scss
+++ b/packages/core/tokens/main.scss
@@ -3,5 +3,6 @@
 @forward "typography";
 @forward "layout";
 @forward "opacity";
+@forward "mixins";
 
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:wght,FILL,GRAD@400,0,0&display=swap");
