feat: add React Tooltip component with styling and storybook integration

--- a/packages/core/tokens/_typography.scss
+++ b/packages/core/tokens/_typography.scss
@@ -235,3 +235,17 @@ $button-l-semibold-letter-spacing: $letter-spacing-s;
     @include typography-text-s;
     font-weight: $text-s-bold-font-weight;
 }
+
+@mixin typography-tooltip{
+    font-feature-settings: "liga" off, "clig" off;
+    font-style: normal;
+}
+
+@mixin typography-tooltip-label{
+    @include typography-tooltip;
+    font-family: $text-m-regular-font-family;
+    font-weight: $text-m-regular-font-weight;
+    font-size: $text-m-regular-font-size;
+    line-height: $text-m-regular-line-height;
+    letter-spacing: $text-m-regular-letter-spacing;
+}
