--- a/packages/angular/projects/ds-rte-lib/src/lib/components/checkbox/checkbox.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/checkbox/checkbox.component.scss
@@ -16,9 +16,7 @@
     background: var(--background-disabled);
 
     ~ .rte-checkbox-icons {
-      svg {
-        fill: var(--content-disabled);
-      }
+      color: var(--content-disabled);    
     }
   }
 
@@ -42,6 +40,7 @@
     background: var(--background-default);
     align-items: center;
     justify-content: center;
+    margin: $positive-spacing_050 0;
 
     &::before {
       content: '';
@@ -122,9 +121,7 @@
         }
       }
       ~ .rte-checkbox-icons {
-          svg {
-            fill: var(--content-tertiary);
-          }
+          color: var(--content-tertiary);
       }
 
       &.error {
@@ -166,11 +163,8 @@
     display: none;
     z-index: 1;
     pointer-events: none;
-    transform: translate(4px, 3px);
+    transform: translateY(4px);
     position: absolute;
-
-    svg {
-      fill: white;
-    }
+    color: white;
   }
 }
