--- a/packages/react/src/components/checkbox/Checkbox.module.scss
+++ b/packages/react/src/components/checkbox/Checkbox.module.scss
@@ -16,9 +16,7 @@
     background: var(--background-disabled);
 
     ~ .checkbox-icons {
-      svg {
-        fill: var(--content-disabled);
-      }
+      color: var(--content-disabled);
     }
   }
 
@@ -42,6 +40,7 @@
     background: var(--background-default);
     align-items: center;
     justify-content: center;
+    margin: $positive-spacing_050 0;
 
     &::before {
       content: '';
@@ -123,9 +122,7 @@
         }
       }
       ~ .checkbox-icons {
-          svg {
-            fill: var(--content-tertiary);
-          }
+          color: var(--content-tertiary);
       }
 
       &[data-error='true'] {
@@ -167,11 +164,8 @@
     display: none;
     z-index: 1;
     pointer-events: none;
-    transform: translate(4px, 3px);
+    transform: translateY(4px);
     position: absolute;
-
-    svg {
-      fill: white;
-    }
+    color: white;
   }
 }
