--- a/packages/react/src/components/splitButton/splitButton.module.scss
+++ b/packages/react/src/components/splitButton/splitButton.module.scss
@@ -1,1 +1,234 @@
 @use '@design-system-rte/core/tokens/main.scss' as *;
+
+.splitButtonContainer {
+    display: inline-flex;
+    padding: $positive-spacing_0;
+    align-items: center;
+    gap: $positive-spacing_0;
+    align-self: stretch;
+
+    &[data-size='s'] {
+        height: 24px;
+
+        &[data-compact-spacing='true'] {
+            height: 20px;
+        }
+    }
+
+    &[data-size='m'] {
+        height: 32px;
+
+        &[data-compact-spacing='true'] {
+            height: 24px;
+        }
+    }
+
+    &[data-size='l'] {
+        height: 40px;
+
+        &[data-compact-spacing='true'] {
+            height: 28px;
+        }
+    }
+
+    .splitButtonLeft {
+        display: flex;
+        border: none;
+        padding: $positive-spacing_0 $positive-spacing_100;
+        align-items: center;
+        gap: $positive-spacing_0;
+        align-self: stretch;
+        border-radius: $radius-s $radius-none $radius-none $radius-s;
+        border-color: var(--border-brand-default);
+        background-color: var(--background-brand-default);
+        color: var(--content-primary-inverse);
+
+        .splitButtonLabel {
+            margin: 0;
+
+            &[data-size='s'] {
+                @include typography-split-button-s;
+            }
+
+            &[data-size='m'] {
+                @include typography-split-button-m;
+            }
+
+            &[data-size='l'] {
+                @include typography-split-button-l;
+            }
+
+        }
+
+        &:hover {
+            cursor: pointer;
+            background-color: var(--background-brand-hover);
+        }
+
+        &:active {
+            background-color: var(--background-brand-pressed);
+        }
+
+        &:disabled {
+            background-color: var(--background-disabled);
+            color: var(--content-disabled);
+            border-top: 1px solid var(--border-disabled);
+            border-bottom: 1px solid var(--border-disabled);
+            border-left: 1px solid var(--border-disabled);
+            cursor: not-allowed;
+        }
+
+        &:focus {
+            //TODO ICI CA MARCHE PAS
+            outline: 1px solid var(--border-brand-default);
+            outline-offset: 4px 4px 4px 4px; 
+        }
+
+        &[data-appearance='secondary'] {
+            border-top: 1px solid var(--border-brand-default);
+            border-bottom: 1px solid var(--border-brand-default);
+            border-left: 1px solid var(--border-brand-default);
+            background-color: var(--background-default);
+            color: var(--content-brand-default);
+
+            &:hover {
+                cursor: pointer;
+                background-color: var(--background-brand-inverse-hover);
+            }
+
+            &:active {
+                background-color: var(--background-brand-inverse-pressed);
+            }
+
+            &:disabled {
+                background-color: var(--background-disabled);
+                color: var(--content-disabled);
+                border-top: 1px solid var(--border-disabled);
+                border-bottom: 1px solid var(--border-disabled);
+                border-left: 1px solid var(--border-disabled);
+                cursor: not-allowed;
+            }
+
+        }
+    }
+
+    .splitButtonDivider {
+        width: 1px;
+        height: 100%;
+        background-color: var(--content-primary-inverse);
+
+        &[data-appearance='secondary'] {
+            background-color: var(--border-brand-default)
+        }
+
+        &[data-disabled='true'] {
+            background-color: var(--border-disabled);
+        }
+    }
+
+    .splitButtonRightContainer {
+        display: flex;
+        position: relative;
+        padding: $positive-spacing_0;
+        align-items: center;
+        justify-content: center;
+        gap: $positive-spacing_0;
+        align-self: stretch;
+
+        &[data-size='s'] {
+            width: 24px;
+        }
+
+        &[data-size='m'] {
+            width: 34px;
+        }
+
+        &[data-size='l'] {
+            width: 44px;
+        }
+
+        .splitButtonRight {
+            display: flex;
+            border: none;
+            padding: $positive-spacing_075 $positive-spacing_200;
+            align-items: center;
+            justify-content: center;
+            align-self: stretch;
+
+            border-radius: $radius-none $radius-s $radius-s $radius-none;
+            border-color: var(--border-brand-default);
+            background-color: var(--background-brand-default);
+
+            color: var(--content-primary-inverse);
+
+            &:hover {
+                cursor: pointer;
+                background-color: var(--background-brand-hover);
+            }
+
+            &:active {
+                background-color: var(--background-brand-pressed);
+            }
+
+            &:disabled {
+                background-color: var(--background-disabled);
+                color: var(--content-disabled);
+                border-top: 1px solid var(--border-disabled);
+                border-bottom: 1px solid var(--border-disabled);
+                border-right: 1px solid var(--border-disabled);
+                cursor: not-allowed;
+            }
+
+            &[data-appearance='secondary'] {
+                border-top: 1px solid var(--border-brand-default);
+                border-bottom: 1px solid var(--border-brand-default);
+                border-right: 1px solid var(--border-brand-default);
+                background-color: var(--background-default);
+                color: var(--content-brand-default);
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: var(--background-brand-inverse-hover);
+                }
+
+                &:active {
+                    background-color: var(--background-brand-inverse-pressed);
+                }
+
+                &:disabled {
+                    background-color: var(--background-disabled);
+                    color: var(--content-disabled);
+                    border-top: 1px solid var(--border-disabled);
+                    border-bottom: 1px solid var(--border-disabled);
+                    border-right: 1px solid var(--border-disabled);
+                    cursor: not-allowed;
+                }
+
+            }
+
+        }
+
+        .splitButtonDropdown{
+            position: absolute;
+
+            &[data-position='bottom-start'] {
+                top: 100%;
+                left: 0;
+            }
+            &[data-position='bottom-end'] {
+                top: 100%;
+                right: 0;
+            }
+            &[data-position='top-start'] {
+                bottom: 100%;
+                left: 0;
+            }
+            &[data-position='top-end'] {
+                bottom: 100%;
+                right: 0;
+            }
+        }
+
+    }
+
+}
