feat: use external-link icon on Link component

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon/icon.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon/icon.component.html
@@ -1,1 +1,1 @@
-<div [innerHTML]="svgContent" [style.height]="(size())+'px'" [style.width]="(size())+'px'" [style.color]="color()" [style.block-size]="(size())+'px'"></div>
+<div [innerHTML]="svgContent" [style.height]="(size())+'px'" [style.width]="(size())+'px'" [style.display]="'flex'"></div>
