--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
@@ -2,4 +2,5 @@
     <span class="rte-link-label">
         {{ label() }}
     </span>
+    <rte-icon *ngIf="externalLink()" name="external-link" [size]="12"></rte-icon>
 </a>
