--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
@@ -1,4 +1,4 @@
-<a class="rte-link" [ngClass]="{'subtle': subtle()}" href="{{ href() }}" role="link">
+<a href="{{ href() }}" class="rte-link" role="link" [ngClass]="{'subtle': subtle()}">
     <span class="rte-link-label">
         {{ label() }}
     </span>
