fix: set icon style in separated file

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon/icon.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon/icon.component.html
@@ -1,1 +1,1 @@
-<div [innerHTML]="svgContent" [style.height]="(size())+'px'" [style.width]="(size())+'px'" [style.display]="'flex'"></div>
+<div [innerHTML]="svgContent" [style.height]="(size())+'px'" [style.width]="(size())+'px'" class="rte-icon-container"></div>
