feat: address tooltip accessibility

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.html
@@ -1,5 +1,7 @@
-<div class="tooltip"
-    class="{{position()}} {{alignment()}}"
-    [ngClass]="{'no-arrow': !arrow()}">
+<div
+    role="tooltip"
+    class="tooltip {{position()}} {{alignment()}}"
+    [ngClass]="{'no-arrow': !arrow()}"
+>
     <span class="tooltip-label"> {{label()}} </span>
 </div>
