--- a/packages/react/src/components/tooltip/Tooltip.module.scss
+++ b/packages/react/src/components/tooltip/Tooltip.module.scss
@@ -125,7 +125,7 @@
         }
     }
 
-    &:hover .tooltipLabel {
+    &:is(:hover, :focus) .tooltipLabel {
         visibility: visible;
     }
 }
