--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.scss
@@ -16,6 +16,7 @@
     padding-inline: $positive-spacing_200;
     border-radius: $radius-s;
     background: var(--background-inverse);
+    transition: opacity 150ms ease-out;
 
     &::after {
         content: '';
@@ -104,6 +105,10 @@
         &::after {
             display: none;
         }
+    }
+
+    &:not(:hover) {
+        transition: opacity 100ms ease-in;
     }
 }
 
