refactor: change no-arrow for arrow in tooltip to avoid definition by negative statements

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.html
@@ -1,7 +1,7 @@
 <div
     role="tooltip"
     class="tooltip {{position()}} {{alignment()}}"
-    [ngClass]="{'no-arrow': !arrow()}"
+    [ngClass]="{'arrow': arrow()}"
 >
     <span class="tooltip-label"> {{label()}} </span>
 </div>
