--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tooltip/tooltip.component.scss
@@ -18,13 +18,6 @@
     background: var(--background-inverse);
     transition: opacity 150ms ease-out;
 
-    &::after {
-        content: '';
-        position: absolute;
-        border-width: 5px;
-        border-style: solid;
-    }
-
     &.top {
         transform: translateX(-50%);
 
@@ -101,9 +94,12 @@
         }
     }
 
-    &.no-arrow {
+    &.arrow {
         &::after {
-            display: none;
+            content: '';
+            position: absolute;
+            border-width: 5px;
+            border-style: solid;
         }
     }
 
