--- a/packages/react/src/components/tooltip/Tooltip.module.scss
+++ b/packages/react/src/components/tooltip/Tooltip.module.scss
@@ -12,6 +12,7 @@
         text-align: center;
         z-index: 1;
         max-width: 160px;
+        max-height: 40px;
         width: fit-content;
         padding-block: $positive-spacing_050;
         padding-inline: $positive-spacing_200;
