feat: add primitives and tokens generations process

--- a/packages/core/tokens/primitives/_colors.scss
+++ b/packages/core/tokens/primitives/_colors.scss
@@ -1,252 +1,252 @@
 $core-black: #000000;
-$core-black-50: #0000007F;
-$core-white: #FFFFFF;
-$core-white-50: #FFFFFF7F;
-$greyscale-0: #F4F5F4;
-$greyscale-50: #EBEBEA;
-$greyscale-100: #E1E1E0;
-$greyscale-150: #D7D6D5;
-$greyscale-200: #CDCCCB;
-$greyscale-250: #C2C1C0;
-$greyscale-300: #B7B7B6;
-$greyscale-350: #ACACAB;
-$greyscale-400: #A1A1A0;
+$core-black-50: rgba(0, 0, 0, 0.50);
+$core-white: #ffffff;
+$core-white-50: rgba(255, 255, 255, 0.50);
+$greyscale-0: #f4f5f4;
+$greyscale-50: #ebebea;
+$greyscale-100: #e1e1e0;
+$greyscale-150: #d7d6d5;
+$greyscale-200: #cdcccb;
+$greyscale-250: #c2c1c0;
+$greyscale-300: #b7b7b6;
+$greyscale-350: #acacab;
+$greyscale-400: #a1a1a0;
 $greyscale-450: #969695;
-$greyscale-500: #8B8A8A;
-$greyscale-550: #7F7E7E;
+$greyscale-500: #8b8a8a;
+$greyscale-550: #7f7e7e;
 $greyscale-600: #737272;
 $greyscale-650: #666665;
 $greyscale-700: #595958;
-$greyscale-750: #4C4C4B;
-$greyscale-800: #3E3E3D;
-$greyscale-850: #302F2F;
-$greyscale-900: #201F1F;
-$greyscale-950: #0D0C0C;
-$bleu-rte-0: #F8FDFF;
-$bleu-rte-50: #F0FBFF;
-$bleu-rte-100: #E0F5FE;
-$bleu-rte-200: #B9EDFE;
-$bleu-rte-300: #7CE1FD;
-$bleu-rte-400: #36D3FA;
-$bleu-rte-500: #0CBDEB;
-$bleu-rte-600: #00A6D9;
-$bleu-rte-700: #017AA3;
+$greyscale-750: #4c4c4b;
+$greyscale-800: #3e3e3d;
+$greyscale-850: #302f2f;
+$greyscale-900: #201f1f;
+$greyscale-950: #0d0c0c;
+$bleu-rte-0: #f8fdff;
+$bleu-rte-50: #f0fbff;
+$bleu-rte-100: #e0f5fe;
+$bleu-rte-200: #b9edfe;
+$bleu-rte-300: #7ce1fd;
+$bleu-rte-400: #36d3fa;
+$bleu-rte-500: #0cbdeb;
+$bleu-rte-600: #00a6d9;
+$bleu-rte-700: #017aa3;
 $bleu-rte-800: #066686;
-$bleu-rte-900: #0B556F;
-$bleu-rte-950: #07364A;
-$bleu-digital-0: #F7FAFF;
-$bleu-digital-50: #EEF7FF;
-$bleu-digital-100: #D8EBFF;
-$bleu-digital-200: #BADDFF;
-$bleu-digital-300: #8AC8FF;
-$bleu-digital-400: #53AAFF;
-$bleu-digital-500: #2B86FF;
-$bleu-digital-600: #1465FC;
-$bleu-digital-700: #0D4FEA;
-$bleu-digital-800: #123FBB;
-$bleu-digital-900: #153B93;
+$bleu-rte-900: #0b556f;
+$bleu-rte-950: #07364a;
+$bleu-digital-0: #f7faff;
+$bleu-digital-50: #eef7ff;
+$bleu-digital-100: #d8ebff;
+$bleu-digital-200: #baddff;
+$bleu-digital-300: #8ac8ff;
+$bleu-digital-400: #53aaff;
+$bleu-digital-500: #2b86ff;
+$bleu-digital-600: #1465fc;
+$bleu-digital-700: #0d4fea;
+$bleu-digital-800: #123fbb;
+$bleu-digital-900: #153b93;
 $bleu-digital-950: #122559;
-$marine-0: #F7F9FC;
-$marine-50: #F3F6FC;
-$marine-100: #E7EDF7;
-$marine-200: #C9D8EE;
-$marine-300: #9AB9DF;
-$marine-400: #6494CC;
-$marine-500: #3D70AD;
-$marine-600: #2F5D9A;
-$marine-700: #274A7D;
+$marine-0: #f7f9fc;
+$marine-50: #f3f6fc;
+$marine-100: #e7edf7;
+$marine-200: #c9d8ee;
+$marine-300: #9ab9df;
+$marine-400: #6494cc;
+$marine-500: #3d70ad;
+$marine-600: #2f5d9a;
+$marine-700: #274a7d;
 $marine-800: #244068;
 $marine-900: #233857;
-$marine-950: #17243A;
-$bleu-iceberg-0: #F9FBFD;
-$bleu-iceberg-50: #F3F6FC;
-$bleu-iceberg-100: #E6EEF8;
-$bleu-iceberg-200: #C7DBF0;
-$bleu-iceberg-300: #96BDE3;
-$bleu-iceberg-400: #5E9AD2;
-$bleu-iceberg-500: #397EBE;
-$bleu-iceberg-600: #2964A0;
+$marine-950: #17243a;
+$bleu-iceberg-0: #f9fbfd;
+$bleu-iceberg-50: #f3f6fc;
+$bleu-iceberg-100: #e6eef8;
+$bleu-iceberg-200: #c7dbf0;
+$bleu-iceberg-300: #96bde3;
+$bleu-iceberg-400: #5e9ad2;
+$bleu-iceberg-500: #397ebe;
+$bleu-iceberg-600: #2964a0;
 $bleu-iceberg-700: #225082;
 $bleu-iceberg-800: #214770;
-$bleu-iceberg-900: #1F3B5B;
-$bleu-iceberg-950: #15253C;
-$bleu-petrole-0: #FBFCFD;
-$bleu-petrole-50: #F2F8F9;
-$bleu-petrole-100: #DEECEF;
-$bleu-petrole-200: #C1DAE0;
-$bleu-petrole-300: #95BFCB;
-$bleu-petrole-400: #639CAD;
+$bleu-iceberg-900: #1f3b5b;
+$bleu-iceberg-950: #15253c;
+$bleu-petrole-0: #fbfcfd;
+$bleu-petrole-50: #f2f8f9;
+$bleu-petrole-100: #deecef;
+$bleu-petrole-200: #c1dae0;
+$bleu-petrole-300: #95bfcb;
+$bleu-petrole-400: #639cad;
 $bleu-petrole-500: #478093;
-$bleu-petrole-600: #3E6A7C;
+$bleu-petrole-600: #3e6a7c;
 $bleu-petrole-700: #375867;
-$bleu-petrole-800: #334A57;
-$bleu-petrole-900: #2E404B;
-$bleu-petrole-950: #10181D;
-$bleu-cyan-0: #F9FEFF;
-$bleu-cyan-50: #EDFDFE;
-$bleu-cyan-100: #D1F9FC;
-$bleu-cyan-200: #A9F2F8;
-$bleu-cyan-300: #6EE6F2;
-$bleu-cyan-400: #2BD0E5;
-$bleu-cyan-500: #0FB3CB;
-$bleu-cyan-600: #108FAA;
-$bleu-cyan-700: #14738A;
-$bleu-cyan-800: #195E71;
-$bleu-cyan-900: #1A4D5F;
-$bleu-cyan-950: #0C3949;
-$vert-foret-0: #F5FCFA;
-$vert-foret-50: #EFFAF6;
-$vert-foret-100: #D7F4E6;
-$vert-foret-200: #B3E7D1;
-$vert-foret-300: #81D4B7;
-$vert-foret-400: #4DBA97;
-$vert-foret-500: #2A9F7D;
-$vert-foret-600: #1B8065;
-$vert-foret-700: #176B57;
+$bleu-petrole-800: #334a57;
+$bleu-petrole-900: #2e404b;
+$bleu-petrole-950: #10181d;
+$bleu-cyan-0: #f9feff;
+$bleu-cyan-50: #edfdfe;
+$bleu-cyan-100: #d1f9fc;
+$bleu-cyan-200: #a9f2f8;
+$bleu-cyan-300: #6ee6f2;
+$bleu-cyan-400: #2bd0e5;
+$bleu-cyan-500: #0fb3cb;
+$bleu-cyan-600: #108faa;
+$bleu-cyan-700: #14738a;
+$bleu-cyan-800: #195e71;
+$bleu-cyan-900: #1a4d5f;
+$bleu-cyan-950: #0c3949;
+$vert-foret-0: #f5fcfa;
+$vert-foret-50: #effaf6;
+$vert-foret-100: #d7f4e6;
+$vert-foret-200: #b3e7d1;
+$vert-foret-300: #81d4b7;
+$vert-foret-400: #4dba97;
+$vert-foret-500: #2a9f7d;
+$vert-foret-600: #1b8065;
+$vert-foret-700: #176b57;
 $vert-foret-800: #145143;
 $vert-foret-900: #114338;
 $vert-foret-950: #082620;
-$vert-0: #F5FFFE;
-$vert-50: #EFFEFB;
-$vert-100: #C7FFF4;
-$vert-200: #90FFE8;
-$vert-300: #51F7DC;
-$vert-400: #1DE4CA;
-$vert-500: #04C8B1;
-$vert-600: #009E8F;
+$vert-0: #f5fffe;
+$vert-50: #effefb;
+$vert-100: #c7fff4;
+$vert-200: #90ffe8;
+$vert-300: #51f7dc;
+$vert-400: #1de4ca;
+$vert-500: #04c8b1;
+$vert-600: #009e8f;
 $vert-700: #058075;
-$vert-800: #0A655E;
-$vert-900: #0D544F;
+$vert-800: #0a655e;
+$vert-900: #0d544f;
 $vert-950: #003332;
-$vert-indications-0: #FDFEF8;
-$vert-indications-50: #FAFCE9;
-$vert-indications-100: #F3F8CF;
-$vert-indications-200: #E6F2A4;
-$vert-indications-300: #D3E86E;
-$vert-indications-400: #BED942;
-$vert-indications-500: #A4C424;
-$vert-indications-600: #7C9818;
-$vert-indications-700: #5E7417;
-$vert-indications-800: #4B5C18;
-$vert-indications-900: #404E19;
-$vert-indications-950: #212B08;
-$vert-digital-0: #F7FFFB;
-$vert-digital-50: #EFFEF6;
-$vert-digital-100: #D9FFEC;
-$vert-digital-200: #B5FDD9;
-$vert-digital-300: #65F8B0;
-$vert-digital-400: #3CEC96;
-$vert-digital-500: #12D577;
-$vert-digital-600: #09B05F;
-$vert-digital-700: #0B8A4D;
-$vert-digital-800: #0E6D40;
-$vert-digital-900: #0E5937;
-$vert-digital-950: #01321C;
-$jaune-0: #FFFEF5;
-$jaune-50: #FEFFE7;
-$jaune-100: #FAFFC1;
-$jaune-200: #FAFF86;
-$jaune-300: #FFFF41;
-$jaune-400: #FFF30D;
-$jaune-500: #FFE500;
-$jaune-600: #D1AA00;
-$jaune-700: #A67A02;
-$jaune-800: #895F0A;
-$jaune-900: #744D0F;
+$vert-indications-0: #fdfef8;
+$vert-indications-50: #fafce9;
+$vert-indications-100: #f3f8cf;
+$vert-indications-200: #e6f2a4;
+$vert-indications-300: #d3e86e;
+$vert-indications-400: #bed942;
+$vert-indications-500: #a4c424;
+$vert-indications-600: #7c9818;
+$vert-indications-700: #5e7417;
+$vert-indications-800: #4b5c18;
+$vert-indications-900: #404e19;
+$vert-indications-950: #212b08;
+$vert-digital-0: #f7fffb;
+$vert-digital-50: #effef6;
+$vert-digital-100: #d9ffec;
+$vert-digital-200: #b5fdd9;
+$vert-digital-300: #65f8b0;
+$vert-digital-400: #3cec96;
+$vert-digital-500: #12d577;
+$vert-digital-600: #09b05f;
+$vert-digital-700: #0b8a4d;
+$vert-digital-800: #0e6d40;
+$vert-digital-900: #0e5937;
+$vert-digital-950: #01321c;
+$jaune-0: #fffef5;
+$jaune-50: #feffe7;
+$jaune-100: #faffc1;
+$jaune-200: #faff86;
+$jaune-300: #ffff41;
+$jaune-400: #fff30d;
+$jaune-500: #ffe500;
+$jaune-600: #d1aa00;
+$jaune-700: #a67a02;
+$jaune-800: #895f0a;
+$jaune-900: #744d0f;
 $jaune-950: #442904;
-$jaune-ocre-0: #FEFCF8;
-$jaune-ocre-50: #FCF9EA;
-$jaune-ocre-100: #FAEFC7;
-$jaune-ocre-200: #F5DE93;
-$jaune-ocre-300: #EFC655;
-$jaune-ocre-400: #EBB53D;
-$jaune-ocre-500: #D99519;
-$jaune-ocre-600: #BB7313;
+$jaune-ocre-0: #fefcf8;
+$jaune-ocre-50: #fcf9ea;
+$jaune-ocre-100: #faefc7;
+$jaune-ocre-200: #f5de93;
+$jaune-ocre-300: #efc655;
+$jaune-ocre-400: #ebb53d;
+$jaune-ocre-500: #d99519;
+$jaune-ocre-600: #bb7313;
 $jaune-ocre-700: #955213;
-$jaune-ocre-800: #7C4117;
-$jaune-ocre-900: #6A3619;
-$jaune-ocre-950: #3D1C0B;
-$jaune-indications-0: #FFFBF7;
-$jaune-indications-50: #FEF7EC;
-$jaune-indications-100: #FCE7C9;
-$jaune-indications-200: #F9CE8E;
-$jaune-indications-300: #F6AB4D;
-$jaune-indications-400: #F4922B;
-$jaune-indications-500: #ED6E13;
-$jaune-indications-600: #D24E0D;
-$jaune-indications-700: #AE330F;
-$jaune-indications-800: #8E2712;
+$jaune-ocre-800: #7c4117;
+$jaune-ocre-900: #6a3619;
+$jaune-ocre-950: #3d1c0b;
+$jaune-indications-0: #fffbf7;
+$jaune-indications-50: #fef7ec;
+$jaune-indications-100: #fce7c9;
+$jaune-indications-200: #f9ce8e;
+$jaune-indications-300: #f6ab4d;
+$jaune-indications-400: #f4922b;
+$jaune-indications-500: #ed6e13;
+$jaune-indications-600: #d24e0d;
+$jaune-indications-700: #ae330f;
+$jaune-indications-800: #8e2712;
 $jaune-indications-900: #752112;
-$jaune-indications-950: #430E05;
-$saumon-0: #FEF9F7;
-$saumon-50: #FEF4F2;
-$saumon-100: #FDE8E3;
-$saumon-200: #FCD5CC;
-$saumon-300: #F9B7A8;
-$saumon-400: #F48D75;
-$saumon-500: #EC775C;
-$saumon-600: #D64C2C;
-$saumon-700: #B43D21;
-$saumon-800: #95351F;
-$saumon-900: #7C3120;
-$saumon-950: #43160C;
-$rose-digital-0: #FFF7F8;
-$rose-digital-50: #FFF1F2;
-$rose-digital-100: #FFE3E5;
-$rose-digital-200: #FFCCD1;
-$rose-digital-300: #FFA1AB;
-$rose-digital-400: #FF546A;
-$rose-digital-500: #F93A58;
-$rose-digital-600: #E71742;
-$rose-digital-700: #C30D36;
-$rose-digital-800: #A30E35;
-$rose-digital-900: #8B1034;
-$rose-digital-950: #4E0317;
-$fuschia-0: #FFF8FA;
-$fuschia-50: #FFF0F3;
-$fuschia-100: #FFE1E9;
-$fuschia-200: #FFC8D8;
-$fuschia-300: #FF9BB8;
-$fuschia-400: #FF6394;
-$fuschia-500: #FF2C74;
-$fuschia-600: #F60862;
-$fuschia-700: #DC0059;
-$fuschia-800: #AE034D;
+$jaune-indications-950: #430e05;
+$saumon-0: #fef9f7;
+$saumon-50: #fef4f2;
+$saumon-100: #fde8e3;
+$saumon-200: #fcd5cc;
+$saumon-300: #f9b7a8;
+$saumon-400: #f48d75;
+$saumon-500: #ec775c;
+$saumon-600: #d64c2c;
+$saumon-700: #b43d21;
+$saumon-800: #95351f;
+$saumon-900: #7c3120;
+$saumon-950: #43160c;
+$rose-digital-0: #fff7f8;
+$rose-digital-50: #fff1f2;
+$rose-digital-100: #ffe3e5;
+$rose-digital-200: #ffccd1;
+$rose-digital-300: #ffa1ab;
+$rose-digital-400: #ff546a;
+$rose-digital-500: #f93a58;
+$rose-digital-600: #e71742;
+$rose-digital-700: #c30d36;
+$rose-digital-800: #a30e35;
+$rose-digital-900: #8b1034;
+$rose-digital-950: #4e0317;
+$fuschia-0: #fff8fa;
+$fuschia-50: #fff0f3;
+$fuschia-100: #ffe1e9;
+$fuschia-200: #ffc8d8;
+$fuschia-300: #ff9bb8;
+$fuschia-400: #ff6394;
+$fuschia-500: #ff2c74;
+$fuschia-600: #f60862;
+$fuschia-700: #dc0059;
+$fuschia-800: #ae034d;
 $fuschia-900: #940749;
 $fuschia-950: #530023;
-$rouge-indications-0: #FEF8FA;
-$rouge-indications-50: #FFF1F2;
-$rouge-indications-100: #FFE4E6;
-$rouge-indications-200: #FDCED4;
-$rouge-indications-300: #FCA5AF;
-$rouge-indications-400: #F97385;
-$rouge-indications-500: #F14662;
-$rouge-indications-600: #DE2048;
-$rouge-indications-700: #C81640;
-$rouge-indications-800: #9D1439;
+$rouge-indications-0: #fef8fa;
+$rouge-indications-50: #fff1f2;
+$rouge-indications-100: #ffe4e6;
+$rouge-indications-200: #fdced4;
+$rouge-indications-300: #fca5af;
+$rouge-indications-400: #f97385;
+$rouge-indications-500: #f14662;
+$rouge-indications-600: #de2048;
+$rouge-indications-700: #c81640;
+$rouge-indications-800: #9d1439;
 $rouge-indications-900: #861537;
-$rouge-indications-950: #4B0618;
-$taupe-0: #FBFBFB;
-$taupe-50: #F8F7F8;
-$taupe-100: #F3F0F2;
-$taupe-200: #E7E3E6;
-$taupe-300: #D4CDD2;
-$taupe-400: #B9ADB5;
-$taupe-500: #A2929C;
-$taupe-600: #8A7883;
-$taupe-700: #73636C;
-$taupe-800: #61535B;
-$taupe-900: #574C52;
-$taupe-950: #2F282C;
-$violet-0: #FCFBFD;
-$violet-50: #F9F7FC;
-$violet-100: #F3EFF8;
-$violet-200: #E6DEF0;
-$violet-300: #D2C3E4;
-$violet-400: #B89FD3;
-$violet-500: #9979BC;
-$violet-600: #7D5A9F;
+$rouge-indications-950: #4b0618;
+$taupe-0: #fbfbfb;
+$taupe-50: #f8f7f8;
+$taupe-100: #f3f0f2;
+$taupe-200: #e7e3e6;
+$taupe-300: #d4cdd2;
+$taupe-400: #b9adb5;
+$taupe-500: #a2929c;
+$taupe-600: #8a7883;
+$taupe-700: #73636c;
+$taupe-800: #61535b;
+$taupe-900: #574c52;
+$taupe-950: #2f282c;
+$violet-0: #fcfbfd;
+$violet-50: #f9f7fc;
+$violet-100: #f3eff8;
+$violet-200: #e6def0;
+$violet-300: #d2c3e4;
+$violet-400: #b89fd3;
+$violet-500: #9979bc;
+$violet-600: #7d5a9f;
 $violet-700: #674883;
-$violet-800: #563C6C;
-$violet-900: #4A355A;
-$violet-950: #2B1A38;
+$violet-800: #563c6c;
+$violet-900: #4a355a;
+$violet-950: #2b1a38;
