--- a/packages/core/tokens/main.scss
+++ b/packages/core/tokens/main.scss
@@ -1,5 +1,5 @@
-@forward "radius";
-@forward "spacings";
+@forward "border";
+@forward "spacing";
 @forward "typography";
 @forward "layout";
 @forward "opacity";
